# homepage.rs

./: .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  Rocket.toml  debug.sh  docker-compose.yml
src/: blog.rs  config.rs  main.rs  tera.rs
static/: blog.js  blog_tags.js
styles/: index.scss
templates/: base.html.tera  blog.html.tera  blog_post.html.tera  blog_post_listing.html.tera  index.html.tera  navbar.html.tera  publications.html.tera
templates/error/: 404.html.tera
