[package]
name = "homepage_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
pulldown-cmark = "0.9.2"
syntect = "5.0"
toml = "0.5.9"
serde = "1.0"
chrono = "*"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]
